# candy_blitz

./: .gitignore  README.md
.agents/skills/blockchain-game-dev/: SKILL.md
.serena/: project.yml
candy_blitz/: Anchor.toml
candy_blitz/programs/candy-blitz/: Cargo.toml
candy_blitz/programs/candy-blitz/src/: lib.rs
game/: audio.js  blockchain.js  config.js  effects.js  game-main.css  game-main.js  index.html  manifest.json  package.json  storage.js  sw.js  vercel.json
