[package]
name = "candy-blitz"
version = "0.1.0"
description = "Candy Blitz — On-chain Match-3 with MagicBlock ER"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]
name = "candy_blitz"
[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8.5", features = ["anchor", "disable-realloc"] }
